# vdnn-plus-plus

./: .gitignore  README.md  clean_expt.sh  get_mean_var.sh  lag_time.py  mean_var.cpp  run_both.sh  run_network.sh  run_network_vgg.sh  run_vdnn_ext_demo.sh
base/: CMakeLists.txt  burn_run.sh  burn_run_vgg.sh  run_network.sh  run_network_reverse.sh  run_network_reverse_vgg.sh  run_network_vgg.sh
base/include/: layer_params.h  neural_net.h  solver.h  user_iface.h  utils.h
base/src/: alexnet_test.cu  layer_params.cu  main.cu  mnist_test.cu  neural_net.cu  solver.cu  user_iface.cu  utils.cu  vdnn_ext_demo.cu  vgg_test.cu
compression_test/: compression_batches  compression_bulk  compression_time.cu  compression_time_req_allocate.cu  general_compression.cu  host_copy_time.cu  run_general_compression.sh
compression_test/conv_time_test/: CMakeLists.txt  conv_time  conv_time.cu  get_times.sh  temp_copy.cu
final_experiments/: copy_res.sh
memory_manager_test/cnmem-test/: output_stats_cont_free.txt  output_stats_non_cont_free.txt  read_me.odt  test_cnmem.cu
memory_manager_test/cnmem_merge_head/: CMakeLists.txt
memory_manager_test/cnmem_merge_head/src/: cnmem.cpp  mem_alloc.cu
memory_manager_test/mem_alloc_test/: CMakeLists.txt  mem_alloc.cu
memory_manager_test/vdnn/: CMakeLists.txt  burn_run_vgg.sh  run_network.sh  run_network_reverse_vgg.sh
memory_manager_test/vdnn/cnmem/src/: cnmem.cpp
memory_manager_test/vdnn/include/: cnmem.h  neural_net.h  utils.h
memory_manager_test/vdnn/src/: alexnet_test.cu  cnmem.cpp  layer_params.cu  neural_net.cu  solver.cu  vgg_test.cu
memory_manager_test/vdnn_cnmem_right_loop_sim/: run_network.sh
memory_manager_test/vdnn_cnmem_right_loop_sim/include/: cnmem.h  utils.h
memory_manager_test/vdnn_cnmem_right_loop_sim/src/: cnmem.cpp  neural_net.cu
memory_manager_test/vdnn_loop_sim/: CMakeLists.txt  burn_run.sh  run_both.sh  run_network.sh  run_network_reverse.sh  run_network_vgg.sh
memory_manager_test/vdnn_loop_sim/include/: utils.h
memory_manager_test/vdnn_loop_sim/src/: alexnet_test.cu  neural_net.cu
simple_expt/: copy_split.cu
vdnn/: CMakeLists.txt  burn_run.sh  burn_run_vgg.sh  run_network.sh  run_network_reverse.sh  run_network_reverse_vgg.sh  run_network_vgg.sh
vdnn/include/: layer_params.h  neural_net.h  solver.h  user_iface.h  utils.h
vdnn/src/: alexnet_test.cu  layer_params.cu  neural_net.cu  neural_net_time.cu  solver.cu  vdnn_ext_demo.cu  vgg_test.cu
vdnn_ext/: CMakeLists.txt  run_network.sh  run_network_reverse.sh  run_network_reverse_vgg.sh  run_network_vgg.sh
vdnn_ext/include/: layer_params.h  neural_net.h  utils.h
vdnn_ext/src/: alexnet_test.cu  cnmem.cpp  layer_params.cu  neural_net.cu  utils.cu  vdnn_ext_demo.cu  vgg_test.cu
vdnn_ext_cmp/: CMakeLists.txt  run_network.sh  run_network_reverse.sh  run_network_reverse_vgg.sh
vdnn_ext_cmp/include/: neural_net.h  utils.h
vdnn_ext_cmp/src/: mnist_test.cu
vdnn_ext_cmp/src/neural_net/: base.cu  get_loss.cu  vdnn_ext.cu
